--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,22 @@ dependency-reduced-pom.xml
 
 # Other
 HELP.md
+
+# Frontend artifacts
+frontend/node_modules/
+frontend/dist/
+frontend/.cache/
+frontend/.vite/
+frontend/.parcel-cache/
+frontend/.turbo/
+frontend/.eslintcache
+frontend/.stylelintcache
+frontend/.DS_Store
+frontend/.env*
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+frontend/package-lock.json
+frontend/yarn.lock
+frontend/pnpm-lock.yaml
