--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Compiled output
-/target/
+target/
 
 # Log files
 *.log
@@ -23,6 +23,10 @@ dependency-reduced-pom.xml
 .settings/
 .vscode/
 
+# OS-specific
+.DS_Store
+Thumbs.db
+
 # Other
 HELP.md
 
@@ -35,12 +39,10 @@ frontend/.parcel-cache/
 frontend/.turbo/
 frontend/.eslintcache
 frontend/.stylelintcache
-frontend/.DS_Store
 frontend/.env*
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
 frontend/pnpm-debug.log*
-frontend/package-lock.json
 frontend/yarn.lock
 frontend/pnpm-lock.yaml
