--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,19 +38,20 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Login to Docker Hub
-      if: ${{ secrets.DOCKER_HUB_USERNAME != '' }}
+      if: secrets.DOCKER_HUB_USERNAME != ''
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     - name: Fail if Docker Hub username is not set
-      if: ${{ secrets.DOCKER_HUB_USERNAME == '' }}
+      if: secrets.DOCKER_HUB_USERNAME == ''
       run: |
         echo "::error::DOCKER_HUB_USERNAME secret is not set. Please add it to your repository settings."
         exit 1
 
     - name: Build and push Docker image
+      if: secrets.DOCKER_HUB_USERNAME != ''
       uses: docker/build-push-action@v4
       with:
         context: .
