--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     steps:
     - uses: actions/checkout@v3
@@ -37,15 +41,23 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - name: Check Docker Hub credentials
+      run: |
+        if [ -z "$DOCKER_USERNAME" ]; then
+          echo "::error::DOCKER_HUB_USERNAME secret is not set"
+          exit 1
+        fi
+        echo "Docker username is set (length: ${#DOCKER_USERNAME})"
+
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+        username: ${{ env.DOCKER_USERNAME }}
+        password: ${{ env.DOCKER_TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/kaiburr-task-manager:latest
+        tags: ${{ env.DOCKER_USERNAME }}/kaiburr-task-manager:latest
