--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,14 +50,9 @@ jobs:
         echo "Docker username is set (length: ${#DOCKER_USERNAME})"
 
     - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ env.DOCKER_TOKEN }}
+      run: echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ env.DOCKER_USERNAME }}/kaiburr-task-manager:latest
+      run: |
+        docker build -t $DOCKER_USERNAME/kaiburr-task-manager:latest .
+        docker push $DOCKER_USERNAME/kaiburr-task-manager:latest
