--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,10 @@ jobs:
     - name: Login to Docker Hub
       run: echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
-    - name: Build and push Docker image
+    - name: Build Docker image
       run: |
-        docker build -t $DOCKER_USERNAME/kaiburr-task-manager:latest .
+        docker buildx build --platform linux/amd64 -t $DOCKER_USERNAME/kaiburr-task-manager:latest --load .
+    
+    - name: Push Docker image
+      run: |
         docker push $DOCKER_USERNAME/kaiburr-task-manager:latest
